[tool.poetry]
name = "stardew-hdtexture-patcher"
version = "2.0.0"
description = "Converts pytk-based HD portrait mods into compatible with HD Portraits"
authors = ["Abhi Agarwal <abhiaagarwal01@gmail.com>"]
readme = "README.md"
packages = [{include = "stardew_hdtexture_patcher"}]

[tool.poetry.dependencies]
python = "^3.11"
json5 = "^0.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
